# venvit

./: .gitignore  .pre-commit-config.yaml  CreateAccountDirStructure.bat  CreateCompanyDirStructure.bat  CreateTournament.bat  InstallIt_setup.bat  PushToGoogle.py  README.rst  ReahlEnv.bat  RealTimeEnv.bat  VEnvRemove.bat  addplop.bat  bee-dev01.bat  bee-dev04.bat  bee-dev05.bat  cleanpycache.ps1  del_dt.bat  del_dt.ps1  dev.bat  dev.bat.bak  dev.ps1  env_var_loc_dev.bat  git_s1a.bat  git_s1b.bat  git_s2.bat  git_s3.bat  git_s4.bat  gitbeeaddA.bat  gitbeeadda.bat  gitbeebranchcommit.bat  gitbeebranchnew.bat  gitbeemerge.bat  gitbeenew.bat  gitbeepushbranch.bat  gitbeepushtag.bat  gitbeesyncbranch.bat  gitbeetagpush.bat  gitconfig.bat  gitexpadd.bat  gitexpclone.bat  (+110 more)
.github/ISSUE_TEMPLATE/: bugfix.md
.github/workflows/: 00-deployment-pipeline.yml  01-pre-commit-and-document-check.yml  03-ci.yml  04-build-and-deploy-to-production.yml  build-and-deploy-to-production.yml  (+2 more)
Archive/: ReahlEnv.bat  RealTimeEnv.sh  db4setdev.bat  db4setlocal.bat  del_dt.bat.old  del_dt.ps1  dev.bat  gitbeebranchmerge.bat  gitbeebranchpush.bat  gitbeebranchsync.bat  gitpitadda.bat  gitpitbranchnew.bat  gitpitbranchpush.bat  gitpitbranchsync.bat  gitrtebranchnew.bat  rte-db_init.bat  venv_FastApiExample_install (1).ps1  venv_RTE_install (1).bat  venv_ReactDefEnv_setup.bat  venv_ResultCollector_install (1).ps1  venv_SemVerIt_setup.bat  venv_URSProd_setup.bat  venv_Valkyrie_Account_Amendments_setup.bat  venv_batch_setup.bat  venv_fintech-chnmgr-transaction-db_setup.bat  venv_fintech-config-db-migration_setup.bat  venv_fintech-config-proxy_setup.bat  venv_gitit_setup.bat  venv_pagelayout_setup.bat  venv_prodigyhelmsman_setup.bat  venv_reahlbalancesheet_setup.bat  venv_resultcollector_install (1).bat  venv_resultcollector_setup.bat  venv_rte-db_setup_mandatory.bat.old  venv_rteRestAPI_setup.bat  venv_rte_setup.bat  venvinit.bat  venvinit.ps1  vn.bat.old
src/: vn.ps1
