[project]
name = 'batch'
version = '5.1.2'
authors = [
    { name = 'Hendrik du Toit', email = 'hendrik@brightedge.co.za' },
	{ name = 'Dirk du Toit', email = 'dirk@brightedge.co.za' },
	{ name = 'Henru du Toit', email = 'henru@brightedge.co.za' },
]
description = 'Tools for creating Python virtual environments.'
license = {file = 'LICENSE'}
classifiers = [
    'Development Status :: 5 - Production/Stable',
	'Intended Audience :: Developers',
	'Topic :: Software Development',
	'Topic :: Software Development :: Version Control',
	'Topic :: Software Development :: Version Control :: Git',
	'License :: OSI Approved :: MIT License',
	'Programming Language :: Python :: 3.8',
	'Programming Language :: Python :: 3.9',
	'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11',
]
readme = {file = 'README.rst', content-type = 'text/x-rst'}
requires-python = '>=3.8, <=12.0'
dependencies = [
	'google-auth ',
	'google-api-python-client'
]

[project.optional-dependencies]
dev = [
    'git-it',
]

[project.urls]
Changelog = 'https://github.com/BrightEdgeeServices/Batch/blob/master/CHANGES.md'
Homepage = 'https://github.com/BrightEdgeeServices/Batch'

[build-system]
requires = [
    "setuptools >= 68",
    "wheel",
    "setuptools-git >= 1.1",
]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = true
line-length = 120
target-version = ["py311"]

[tool.codespell]
count = ''
quiet-level = 2
skip = 'documentation/Archive/*'

[tool.coverage.run]
source = ['src']

[tool.pytest.ini_options]
addopts = ['--import-mode=importlib', '-vv', '--ignore-glob=*\\Archive']
pythonpath = ['src','src/rte-db', 'tests' ]
markers = [
    "select: Run a selection of tests",
    "structure_accounting: Run tests linked to accounting",
]
filterwarnings = [
#    "ignore::DeprecationWarning",
]
testpaths = 'tests'
